applications/keycloak/statefulset-keycloak.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  serviceName: keycloak-discovery
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - start
        image: quay.io/keycloak/keycloak:26.6.1
        name: keycloak
        
        resources:
          limits:
            cpu: "2"
            memory: 2000Mi
          requests:
            cpu: 500m
            memory: 1700Mi

        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 7800
          name: jgroups
          protocol: TCP
        - containerPort: 57800
          name: jgroups-fd
          protocol: TCP
        
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 9000
          periodSeconds: 10

        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 9000
          periodSeconds: 10
        
        startupProbe:
          failureThreshold: 600
          httpGet:
            path: /health/started
            port: 9000
          periodSeconds: 1
