applications/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/description: Keycloak
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/href: https://login.thegraveshouse.com
    gethomepage.dev/icon: keycloak.png
    gethomepage.dev/name: Login
    gethomepage.dev/pod-selector: app=keycloak
    gethomepage.dev/siteMonitor: https://login.thegraveshouse.com
  name: keycloak
  namespace: keycloak
spec:
  hostnames:
  - login.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: keycloak
      namespace: keycloak
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
